Added Artillerist kit description